minor fix for channel menu button alignment

--- a/ui/scss/component/_claim-list.scss
+++ b/ui/scss/component/_claim-list.scss
@@ -760,6 +760,7 @@
     width: var(--height-button);
     padding: 0;
     border-radius: var(--border-radius);
+    align-self: flex-end;
   }
 }
 
